# Auto-GPT-Plugins

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  clean_all.sh  pylintrc  pyproject.toml  qa.bat  qa.sh  requirements.txt  run_pylint.py  sourcery.yaml  style.bat  style.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  test-plugin-installation.yml  test-plugins-nightly.yml
plugins/autogpt-twitter/.github/workflows/: python-app.yml
plugins/twitter/: .gitignore  README.md  __init__.py  helpers.bat  pyproject.toml  requirements.txt
src/auto_gpt_email_plugin/: __init__.py  email.py
src/auto_gpt_plugin_template/: __init__.py  email_plugin.py
src/autogpt_plugins/api_tools/: README.md  __init__.py  api_tools.py  test_api_tools.py
src/autogpt_plugins/astro/: README.md  __init__.py  astronauts.py  test_astro_plugin.py
src/autogpt_plugins/autogpt_gradio_tools/: README.md  __init__.py  test_gradio_tools.py  tools.py
src/autogpt_plugins/baidu_search/: README.md  README.zh.md  __init__.py  baidu_search.py  test_auto_gpt_baidu_plugin.py
src/autogpt_plugins/bing_ai/: README.md  __init__.py  bing_ai.py
src/autogpt_plugins/bing_baidu_search/: README.md  README.zh.md  __init__.py  test_auto_gpt_bing_baidu_plugin.py
src/autogpt_plugins/bing_search/: README.md  README.zh.md  __init__.py  bing_search.py  test_auto_gpt_bing.py  test_auto_gpt_bing_baidu_plugin.py
src/autogpt_plugins/bluesky/: README.md  __init__.py
src/autogpt_plugins/bluesky/bluesky_plugin/: bluesky_plugin.py  test_bluesky_plugin.py
src/autogpt_plugins/chat_with_user/: README.md  __init__.py  chat_with_user.py  plugin_window.py  test_chat_with_user.py
src/autogpt_plugins/email/: README.md  __init__.py
src/autogpt_plugins/email/email_plugin/: email_plugin.py  email_plugin_debug.py  (+1 more)
src/autogpt_plugins/financial_data/: README.md  __init__.py  financial_analysis.py  test_auto_gpt_financial_analysis.py
src/autogpt_plugins/gradio-tools/: README.md  __init__.py  tools.py
src/autogpt_plugins/item_list/: README.md  __init__.py  item_list.py
src/autogpt_plugins/memory_graph/: __init__.py  memory_graph.py
src/autogpt_plugins/news_search/: README.md  __init__.py  news_search.py  test_auto_gpt_news_search.py
src/autogpt_plugins/pdf_reader/: README.md  __init__.py  pdf_reader.py
src/autogpt_plugins/planner/: README.md  __init__.py  planner.py
src/autogpt_plugins/random_values/: README.md  __init__.py  random_values.py  test_random_valaues.py
src/autogpt_plugins/reddit/: README.md  __init__.py  reddit.py
src/autogpt_plugins/scenex/: README.md  __init__.py  scenex_plugin.py  test_scenex_plugin.py
src/autogpt_plugins/serpapi/: README.md  __init__.py  serpapi_search.py  test_serpapi_plugin.py
src/autogpt_plugins/skeleton/: README.md  __init__.py  skeleton.py
src/autogpt_plugins/sophie/: README.md  __init__.py  convert_audio.py  sophie_chat.py
src/autogpt_plugins/speech_to_text/: README.md  __init__.py
src/autogpt_plugins/telegram/: README.md  __init__.py  telegram_chat.py
src/autogpt_plugins/text_parser/: README.md  __init__.py  parser_plugin.py  parsers.py  test_parsers.py  test_text_parser.py  text_parser.py  text_parser_plugin.py
src/autogpt_plugins/todo_list/: README.md  __init__.py  todo_list.py
src/autogpt_plugins/twitter/: README.md  __init__.py  twitter.py
src/autogpt_plugins/unzipped_plugins/: README.md  __init__.py  plugin_manager.py  test_unzipped_plugins.py
src/autogpt_plugins/voice_command/: README.md  __init__.py  test_voice_command.py  voice_command_kaldi.py
src/autogpt_plugins/wikipedia_search/: __init__.py  wikipedia_search.py
src/autogpt_plugins/wolframalpha_search/: README.md  __init__.py  test_wolframalpha_search.py  wolframalpha_search.py
(+4 files in other folders)
