[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto_gpt_email_plugin"
version = "0.0.1"
authors = [
  { name="Riensen", email="3340218+riensen@users.noreply.github.com" },
]
description = "The Auto-GPT Email Plugin"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["abstract-singleton"]

[project.urls]
"Homepage" = "https://github.com/riensen/Auto-GPT-Email-Plugin"
"Bug Tracker" = "https://github.com/riensen/Auto-GPT-Email-Plugin/issues"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"