[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogpt_twitter"
version = "0.0.1"
authors = [
  { name="desojo", email="17620345+desojo@users.noreply.github.com" },
]
description = "AutoGPT Twitter integration using the Tweepy API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["abstract-singleton", "tweepy", "pandas", "auto_gpt_plugin_template"]

[project.urls]
"Homepage" = "https://github.com/desojo/autogpt-twitter"
"Bug Tracker" = "https://github.com/desojo/autogpt-twitter"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
